# online-gifts-shop

./: README.md  pyproject.toml  requirements.dev.txt  setup.cfg  setup.py
market_analyzer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
shop_analyzer/: alembic.ini
shop_analyzer/db/: __main__.py  schema.py
shop_analyzer/db/alembic/: env.py
shop_analyzer/db/alembic/versions/: 427bfd4555df_initial.py
